# MLtutorial

./: main.py  pyproject.toml  pytorch.ipynb
.ipynb_checkpoints/: pyproject-checkpoint.toml
B4/: main.py  projection.ipynb  pyproject.toml
PAC_learning/: rand.ipynb  rand.typ
PAC_learning/.ipynb_checkpoints/: rand-checkpoint.ipynb
SVM/: SVM.ipynb
SVM/.ipynb_checkpoints/: SVM-checkpoint.ipynb
kmeansTutorial/: k.Xcsv  kX.csv  kmeans.ipynb
knnTutorial/: hello.py  knn.ipynb  knn_wine.ipynb  pyproject.toml
memo/: geneformer_catchup_memo.md
temp/: Untitled.ipynb  pyproject.toml
temp/.ipynb_checkpoints/: projection-checkpoint.ipynb
